# CSC_569FinalProject

./: README.md  webcamOpen.cpp
FaceDetectServoCode/: FaceDetectServoCode.ino
camcv/: CMakeLists.txt  Makefile  camcv  camcv2.c  camcv_vid0.c  camcv_vid1.cpp  faceDetect  faceDetect.cpp  faceDetectHaikal.cpp  faceDetectOrig.cpp  uartTest.c
